# pfolio

./: .gitattributes  .gitignore  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
afterpython/: .pre-commit-config.yaml  afterpython.toml
pfolio/: main.py  portfolio.py  preference.py
pfolio/cli/: __init__.py  main.py
src/pfolio/: __init__.py  config.py  const.py  portfolio.py
src/pfolio/metrics/: __init__.py  pnls.py  returns.py  stats.py
src/pfolio/utils/: __init__.py  aliases.py
