[project]
name = "pfolio"
version = "0.0.2"
description = "Portfolio Management Library, including analysis, analytics and optimization"
license = "Apache-2.0"
authors = [
    {name = "Stephen Yau", email = "softwareentrepreneer+pfolio@gmail.com"}
]
readme = "README.md"
keywords = ["trading", "portfolio management", "investment", "analytics", "fundamental analysis"]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "narwhals>=2.16.0",
    "polars>=1.37.1",
    "skfolio>=0.15.4",
]

# [project.scripts]
# pfolio = "pfolio.__main__:run_cli"

# [project.entry-points."pfund_shell.commands"]
# pfolio = "pfolio.cli:pfolio_group"

[project.urls]
homepage = "https://pfund.ai"
repository = "https://github.com/PFund-Software-Ltd/pfolio"
documentation = "https://pfolio-docs.pfund.ai"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pfolio"
module-root = "src"

[tool.uv.sources]
pfeed = {path = "../pfeed", editable = true}
pfund = {path = "../pfund", editable = true}
pfund-plot = {path = "../pfund-plot", editable = true}
mtflow = {path = "../mtflow", editable = true}
