[project]
name = "pfolio"
version = "0.0.3"
description = "portfolio analytics and optimization"
license = "Apache-2.0"
authors = [
    {name = "Stephen Yau", email = "softwareentrepreneer+pfolio@gmail.com"}
]
readme = "README.md"
keywords = ["trading", "portfolio management", "investment", "analytics", "fundamental analysis"]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "narwhals>=2.17.0",
    "polars>=1.38.1",
    "skfolio>=0.15.5",
]

[dependency-groups]
dev = [
    "afterpython>=0.2.0",
]

# [project.scripts]
# pfolio = "pfolio.__main__:run_cli"

# [project.entry-points."pfund_shell.commands"]
# pfolio = "pfolio.cli:pfolio_group"

[project.urls]
homepage = "https://pfund.ai"
repository = "https://github.com/PFund-Software-Ltd/pfolio"
# documentation = "https://pfolio-docs.pfund.ai"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.pyright]
# typeCheckingMode = "basic"
reportAny = false
reportExplicitAny = false
reportUnreachable = false
reportImportCycles = false
reportMissingTypeStubs = false
reportUnannotatedClassAttribute = false

[tool.uv.build-backend]
module-name = "pfolio"
module-root = "src"
